--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 
         </div>
     </body>
-    <script type="text/javascript"  src="./js/app.jss"></script>
+    <script type="text/javascript"  src="./js/app.js"></script>
 </html>
